Fix dark mode toggle overflow

--- a/src/style.css
+++ b/src/style.css
@@ -25,7 +25,7 @@
         /* ACCENT */
         --accent-color: 169, 133, 255;
         /* ACCENT COLOR BRIGHTER */
-        /* TBD */
+        --accent-color-bright: 184, 153, 255;
         /* BG */
         --main-color: 255, 255, 255;
         /* SECONDARY */
@@ -53,6 +53,8 @@
 
     --padding: 10px;
     --smaller-text: .8rem;
+
+    --slider-bg: rgb(var(--accent-color));
 }
 
 .fill-profile-button,
@@ -1305,7 +1307,7 @@ div.emoji-picker {
     width: 20px;
     height: 20px;
     border-radius: 50%;
-    transition: .2s;
+    transition: .4s;
 }
 
 .dark-mode-outer:active .dark-mode-slider {
@@ -1327,7 +1329,7 @@ div.emoji-picker {
 }
 
 .dark-mode-input:checked+.dark-mode-outer:active .dark-mode-slider {
-    translate: 15px;
+    translate: 16px;
 }
 
 .dark-mode-input+.dark-mode-outer .dark-mode-slider::after {
@@ -1344,6 +1346,7 @@ div.emoji-picker {
 
 .dark-mode-input:checked+.dark-mode-outer .dark-mode-slider::after {
     opacity: 0;
+    pointer-events: none;
     top: 1rem;
 }
 
@@ -1357,9 +1360,85 @@ div.emoji-picker {
     color: rgb(var(--main-color));
     opacity: 0;
     transition: .4s;
+    pointer-events: none;
 }
 
 .dark-mode-input:checked+.dark-mode-outer .dark-mode-slider::before {
     opacity: 1;
     top: 1px;
+}
+
+/* COLOR SLIDER from https://range-input-css.netlify-app */
+/*********** Baseline, reset styles ***********/
+input[type="range"] {
+    -webkit-appearance: none;
+    appearance: none;
+    background: transparent;
+    cursor: pointer;
+    width: 25rem;
+  }
+  
+  /* Removes default focus */
+  input[type="range"]:focus {
+    outline: none;
+  }
+  
+  /******** Chrome, Safari, Opera and Edge Chromium styles ********/
+  /* slider track */
+  input[type="range"]::-webkit-slider-runnable-track {
+    background-color: var(--slider-bg);
+    border-radius: 0.5rem;
+    height: 0.5rem;
+  }
+  
+  /* slider thumb */
+  input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none; /* Override default look */
+    appearance: none;
+    margin-top: -4px; /* Centers thumb on the track */
+    background-color: #7f7f7f;
+    border-radius: 0.5rem;
+    height: 1rem;
+    width: 1rem;
+  }
+  
+  input[type="range"]:focus::-webkit-slider-thumb {
+    outline: 3px solid #7f7f7f;
+    outline-offset: 0.125rem;
+  }
+  
+  /*********** Firefox styles ***********/
+  /* slider track */
+  input[type="range"]::-moz-range-track {
+    background-color: var(--slider-bg);
+    border-radius: 0.5rem;
+    height: 0.5rem;
+  }
+  
+  /* slider thumb */
+  input[type="range"]::-moz-range-thumb {
+    background-color: rgb(var(--main-color));
+    border: solid 2px rgb(var(--grayed-text-color)); /*Removes extra border that FF applies*/
+    border-radius: 50%;
+    height: 1rem;
+    width: 1rem;
+  }
+  
+  input[type="range"]:focus::-moz-range-thumb{
+    outline: 3px solid rgb(var(--grayed-text-color));
+    outline-offset: 0.125rem;
+  }
+
+  /* END */
+
+  .color-picker-container button {
+    border: solid 2px rgb(var(--accent-color));
+  }
+
+  button.selected {
+    border-color:rgb(var(--text-color));
+}
+
+.color-picker-container input {
+    margin: 10px;
 }
